Commit after editing Hands-on exercise 2

--- a/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.qmd
+++ b/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.qmd
@@ -7,9 +7,9 @@ author: "Walaiporn Pawitranon"
 
 In this chapter, ggplot2 will be introduce for creating more elegant and effective statistics graphics.
 
-# Getting started
+# 1. Getting started
 
-## Installing and loading the required libraries
+## 1.1 Installing and loading the required libraries
 
 In this exercise, beside tidyverse, four R packages will be used. They are:
 
@@ -28,7 +28,7 @@ pacman::p_load(ggrepel, patchwork,
                ggthemes,tidyverse) 
 ```
 
-## Importing the data
+## 1.2 Importing the data
 
 For the purpose of this exercise, a data file called *Exam_data* will be used. It consists of year end examination grades of a cohort of primary 3 students from a local school. It is in csv file format.
 
@@ -44,9 +44,9 @@ There are a total of seven attributes in the exam_data tibble data frame. Four o
 
 -   The continuous attributes are: MATHS, ENGLISH and SCIENCE.
 
-# Beyond ggplot2
+# 2. Beyond ggplot2
 
-## Annotation: ggrepel
+## 2.1 Annotation: ggrepel
 
 One of the challenge in plotting statistical graph is annotation, especially with large number of data points.
 
@@ -79,11 +79,11 @@ ggplot(data=exam_data,
   ggtitle("English scores versus Maths scores for Primary 3")
 ```
 
-## Theme
+## 2.2 Theme
 
 ggplot2 comes with eight [built-in themes](https://ggplot2.tidyverse.org/reference/ggtheme.html), they are: `theme_gray()`, `theme_bw()`, `theme_classic()`, `theme_dark()`, `theme_light()`, `theme_linedraw()`, `theme_minimal()`, and `theme_void()`.
 
-### ggtheme
+### 2.2.1 ggtheme
 
 [**ggthemes**](https://cran.r-project.org/web/packages/ggthemes/index.html) provides [‘ggplot2’ themes](https://yutannihilation.github.io/allYourFigureAreBelongToUs/ggthemes/) that replicate the look of plots by Edward Tufte, Stephen Few, [Fivethirtyeight](https://fivethirtyeight.com/), [The Economist](https://www.economist.com/graphic-detail), ‘Stata’, ‘Excel’, and [The Wall Street Journal](https://www.pinterest.com/wsjgraphics/wsj-graphics/), among others.
 
@@ -98,7 +98,7 @@ ggplot(data=exam_data,
   theme_economist()
 ```
 
-### hrbrthemes
+### 2.2.2 hrbrthemes
 
 Code chunk below will be used to install hrbrtheme onto R environment.
 
@@ -142,7 +142,7 @@ ggplot(data=exam_data,
               grid = "Y")
 ```
 
-# Beyond Single Graph
+# 3. Beyond Single Graph
 
 It is not unusual that multiple graphs are required to tell a compelling visual story. There are several ggplot2 extensions provide functions to compose figure with multiple graphs. In this section, you will learn how to create composite plot by combining multiple graphs. First, let us create three statistical graphics by using the code chunk below.
 
@@ -184,7 +184,7 @@ p3 <- ggplot(data=exam_data,
   ggtitle("English scores versus Maths scores for Primary 3")
 ```
 
-## Pathwork methods
+## 3.1 Pathwork methods
 
 There are several ggplot2 extension’s functions support the needs to prepare composite figure by combining several graphs such as [`grid.arrange()`](https://cran.r-project.org/web/packages/gridExtra/vignettes/arrangeGrob.html) of **gridExtra** package and [`plot_grid()`](https://wilkelab.org/cowplot/reference/plot_grid.html) of [**cowplot**](https://wilkelab.org/cowplot/index.html) package. In this section, I am going to shared with you an ggplot2 extension called [**patchwork**](https://patchwork.data-imaginist.com/) which is specially designed for combining separate ggplot2 graphs into a single figure.
 
@@ -196,7 +196,7 @@ Patchwork package has a very simple syntax where we can create layouts super eas
 
 -   Two-Row Layout using the Division Sign `/`
 
-## Combining two ggplot2 graphs
+## 3.2 Combining two ggplot2 graphs
 
 Figure in the tabset below shows a composite of two histograms created using patchwork. Note how simple the syntax used to create the plot!
 
@@ -208,7 +208,7 @@ p1 + p2
 p1 / p2
 ```
 
-## Combining three ggplot2 graphs
+## 3.3 Combining three ggplot2 graphs
 
 We can plot more complex composite by using appropriate operators. For example, the composite figure below is plotted by using:
 
@@ -226,7 +226,7 @@ We can plot more complex composite by using appropriate operators. For example, 
 (p1 | p2) / p3
 ```
 
-## Creating a composite figure with tag
+## 3.4 Creating a composite figure with tag
 
 In order to identify subplots in text, **patchwork** also provides auto-tagging capabilities as shown in the figure below.
 
@@ -240,7 +240,7 @@ In order to identify subplots in text, **patchwork** also provides auto-taggin
   plot_annotation(tag_levels = 'I')
 ```
 
-## Creating figure with insert
+## 3.5 Creating figure with insert
 
 Beside providing functions to place plots next to each other based on the provided layout. With [`inset_element()`](https://patchwork.data-imaginist.com/reference/inset_element.html) of **patchwork**, we can place one or several plots or graphic elements freely on top or below another plot.
 
@@ -252,7 +252,7 @@ p3 + inset_element(p2,
                    top = 1)
 ```
 
-## Creating a composite figure by using patchwork and ggtheme
+## 3.6 Creating a composite figure by using patchwork and ggtheme
 
 Figure below is created by combining patchwork and theme_economist() of ggthemes package discussed earlier.
 
@@ -261,7 +261,7 @@ patchwork <- (p1 / p2) | p3
 patchwork & theme_economist()
 ```
 
-Figure below is created by combining patchwork and theme_bwt() of ggthemes package.
+Figure below is created by combining patchwork and theme_bw() of ggthemes package.
 
 ```{r}
 patchwork <- (p1 | p2) / p3
